# DirectXTests

./: CMakeLists.txt  README.md
01ClearScreen/: D3DInit.h  WinMain.cpp
02Triangle/: D3DInit.cpp  D3DInit.h  WinMain.cpp
lib/: pch.h
lib/error_handling/: WindowsErrorHandling.cpp  WindowsErrorHandling.h
lib/graphics/: Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h
lib/include/: lib.h
lib/platform/: Window.cpp  Window.h
utils/error_handling/: FileHandling.cpp  WindowsErrorHandling.cpp
utils/include/platform/: Window.h
utils/platform/: Window.cpp
